apps/network-system/envoy-gateway/config/admin/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-admin
  annotations:
    external-dns.alpha.kubernetes.io/target: &loadbalancerIP 192.168.1.201
spec:
  gatewayClassName: envoy-admin

  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: *loadbalancerIP

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - kind: Secret
            name: admin-tls
      allowedRoutes:
        namespaces:
          from: All
